--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@bpmn-io/properties-panel": "^3.26.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-hover-card": "^1.1.6",
@@ -17,8 +18,14 @@
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.6",
+    "axios": "^1.7.9",
+    "bpmn-js": "^18.3.0",
+    "bpmn-js-bpmnlint": "^0.22.3",
+    "bpmn-js-properties-panel": "^5.32.0",
+    "camunda-bpmn-moddle": "^7.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "eslint-plugin-bpmn-io": "^2.2.0",
     "keycloak-js": "^26.1.2",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
