--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-plugin-bpmn-io": "^2.2.0",
+    "jwt-decode": "^4.0.0",
     "keycloak-js": "^26.1.2",
     "lucide-react": "^0.475.0",
     "oidc-client-ts": "^3.1.0",
