--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,5 +27,15 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"]
+  "include": [
+    "src",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/**/*.tsx",
+    "tests/**/*.ts",
+    "tests/**/*.tsx",
+    "declarations.d.ts",
+    "typings.d.ts"
+  ],
+  "exclude": ["node_modules"]
 }
