--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@bpmn-io/form-js": "^1.14.1-alpha.0",
+    "@bpmn-io/form-js-editor": "^1.14.1-alpha.0",
     "@bpmn-io/properties-panel": "^3.26.1",
     "@hookform/resolvers": "^4.1.0",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -34,6 +36,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-plugin-bpmn-io": "^2.2.0",
+    "formiojs": "^4.21.6",
     "jwt-decode": "^4.0.0",
     "keycloak-js": "^26.1.2",
     "lucide-react": "^0.475.0",
